# PCoptim

./: README.md  environment.yml
MCMC/: README.txt  classes.py  functions.py  proposal_all_parameters.csv  run_act.py  run_inact.py
data/initial_state_protocols/: .~lock.activation_initial_state.csv#
data/protocols/: activation.csv  inactivation.csv
data/raw_data/: test_abf.abf  test_atf.atf
data/traces/: activation#1.csv  activation.csv  inactivation#1.csv
data/weights/: activation.csv
ga/configs/: 3_parameters.json  activation#1.json  test.json
ga/mpi_scripts/: ina_model.py  io_utils.py  loss_utils.py  solmodel.py
notebooks/: 001_Test_ctypes.ipynb  001_Test_ina_model_ctypes.ipynb  002_PC_files_processing.ipynb  002_Patch_clamp_output_files_preprocessing_for_ga.ipynb  003_Create_json_file.ipynb  003_Make_weight_for_trace.ipynb  004_Create_json_file.ipynb  005_Results_processing.ipynb  006_Load_mcmc_results.ipynb
results/ga/activation#1/230709_115003/: sol_best.csv
results/ga/activation#1/230709_115003/best/: genes  loss
results/ga/activation#1/230709_115003/dump/: genes  loss
results/pymc/activation/activation#1/: 230710_003238.nc
src/model_ctypes/PC_model/: .~lock.legend_constants.csv#  CMakeLists.txt  ina.c  ina.h  legend_constants.csv  run.c
src/model_ctypes/PC_model_with_pipette/: ina.c  legend_algebraic.csv  legend_constants.csv  run.c
src/model_ctypes/PC_model_without_pipette/: CMakeLists.txt  legend_algebraic.csv  legend_states.csv
src/python_func/: file_processing.py
